# myClaude

./: .gitignore  CLAUDE.md  CONTRACT.md  MEMORY.md  README.md  RELEASE_NOTES.md  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/avatar/: README.md
sidecar/: agent.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_manager.rs  lib.rs  main.rs  platform.rs  process.rs  pty_manager.rs  scanner.rs  sidecar_manager.rs  state.rs
src-tauri/src/commands/: agent.rs  avatar.rs  dictation.rs  library.rs  mod.rs  project.rs  session.rs  settings.rs  terminal.rs
src/components/hub/: GlobalMonitor.tsx  ProjectCard.tsx
src/components/project/: Avatar3DView.tsx  CharacterView.tsx  ChatInput.tsx  ChatView.tsx  ContractEditor.tsx  ContractPanel.tsx  FileEditor.tsx  FolderTree.tsx  LiveBadge.tsx  LocalMonitor.tsx  TerminalView.tsx
src/components/settings/: AvatarVoiceSettings.tsx  VirtualAssistantSettings.tsx
src/components/ui/: ThemeToggle.tsx  badge.tsx  button.tsx
src/lib/: lipsync.ts  liveAssistant.ts  speak.ts  standbyPoses.ts  tagColors.ts
src/store/: agentStore.ts  avatarStore.ts  learnedMotionsStore.ts  libraryStore.ts  liveStatusStore.ts  projectStore.ts  sessionStore.ts  themeStore.ts
src/styles/: globals.css
src/windows/: Hub.tsx  ProjectWindow.tsx
