[package]
name = "claude-desktop-custom"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_desktop_custom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
parking_lot = "0.12"
portable-pty = "0.9.0"
scopeguard = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22"
cpal = "0.15"
whisper-rs = "0.14"
msedge-tts = "0.4.0"
rustls = { version = "0.23", features = ["ring"] }

